[package]
name = "wevt_template"
version = "0.1.0"
authors = ["William Ballenthin <william.ballenthin@fireeye.com>"]
edition = "2018"

[dependencies]
goblin = {version="0.5", features=["pe32", "pe64"]}
log = "0.4"
byteorder = "1"
clap = "4"
fern = "0.6"
chrono = "0.4"
better-panic = "0.3"
anyhow = "1"
thiserror = "1"
hex = "0.4"
tempfile = "3"
simple_logger = "1"
bitflags = "1"
widestring = "0.5"
uuid = "1.0"
evtx = {version="0.7", features=[]}
encoding = "0.2"
lancelot = {git = "https://github.com/williballenthin/lancelot", rev = "1285a34937aaa42ed0b65e6d6ab95eb0daca44be" }

[profile.release]
lto = true